examples/kju/positive/nested_local_functions.kju
fun f(): Int {
	fun g(): Int {
		fun h(): Int {
			return 5;
		};

		return h();
	};

	return f();
}

fun kju(): Unit {
	var x: Int;
}
