examples/kju/negative/lambdas/no_suggestion_overloaded.kju
fun f(x : Int) : Unit {
}

fun f(x : Bool) : Unit {
}

fun kju() : Unit {
    unapply(f);
}